<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_blue"
    tools:background="@drawable/background_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Authors"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                android:id="@+id/id_author_robert_kiyosaki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="05dp"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/robertkiyosaki" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/robert_kiyosaki"
                        android:textColor="@android:color/black"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/id_another_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="05dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/robertkiyosaki" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/robert_kiyosaki"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="05dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/robertkiyosaki" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/robert_kiyosaki"
                            android:textColor="@android:color/black"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="05dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/robertkiyosaki" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/robert_kiyosaki"
                            android:textColor="@android:color/black"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/id_more_author_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="05dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="90dp"
                    app:contentPadding="0dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:contentDescription="More Arrow Round Image"
                            android:src="@drawable/ic_more_24dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Millonaire Stock Trader"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/id_trader_tim_skyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="05dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/timsykes" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/timothy_sykes"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"

                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/id_trader_steven_dux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="05dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/stevendux" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/steven_dux"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/id_trader_ricky_gutierrez"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="05dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/ricky" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ricky_gutierrez"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="05dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/sandile_shezi" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sandile_shezi"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/id_trader_sanjeev_stephan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="05dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/myself" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sanjeev_stephan"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center_horizontal"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/id_more_traders_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="05dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="90dp"
                    app:contentPadding="0dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:contentDescription="More Arrow Round Image"
                            android:src="@drawable/ic_more_24dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

</RelativeLayout>